--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -99,7 +99,7 @@ const featuredProjects = [
       'Especialista en IA',
       'Desarrollador Frontend',
       'Desarrollador Backend',
-      'Experto en Streamlit',
+      'Analista Power BI',
       'Desarrollador Python'
     ];
     
